tests/baselines/reference/internalAliasClassInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(9,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(10,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(17,26): error TS2339: Property 'c' does not exist on type 'typeof m3'.


==== internalAliasClassInsideLocalModuleWithoutExportAccessError.ts (4 errors) ====
    export module x {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c {
            foo(a: number) {
                return a;
            }
        }
    }
    
    export module m2 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m3 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            import c = x.c;
            export var cProp = new c();
            var cReturnVal = cProp.foo(10);
        }
    }
    
    export var d = new m2.m3.c();
                             ~
!!! error TS2339: Property 'c' does not exist on type 'typeof m3'.